--- a/Mern-Task-3/Mern-Intenship-Assignment-3/index.html
+++ b/Mern-Task-3/Mern-Intenship-Assignment-3/index.html
@@ -63,33 +63,33 @@
         </tr>
         <tr>
             <td>Task1</td>
-            <td><a href="https://github.com/atharvarai/React_task1">Repo Link</a></td>
+            <td><a href="https://github.com/Aditya5008/Mern-Internship-Task-3">Repo Link</a></td>
             <td><a href="https://sensational-kheer-a01d16.netlify.app/">Deployment Link</a></td>
         </tr>
         <tr>
             <td>Task2</td>
-            <td><a href="https://github.com/atharvarai/React_task2">Repo Link</a></td>
+            <td><a href="https://github.com/Aditya5008/Mern-Internship-Task-3">Repo Link</a></td>
             <td><a href="https://652acc3b6c9a351b710ed6f4--frolicking-jelly-8187d4.netlify.app/">Deployment Link</a></td>
         </tr>
         <tr>
             <td>Task3</td>
-            <td><a href="https://github.com/atharvarai/React_task3">Repo Link</a></td>
+            <td><a href="https://github.com/Aditya5008/Mern-Internship-Task-3">Repo Link</a></td>
             <td><a href="https://652acc7bd80c345365c1de14--creative-medovik-dd330e.netlify.app/">Deployment Link</a></td>
         </tr>
         <tr>
             <td>Task4</td>
-            <td><a href="https://github.com/atharvarai/React_task4">Repo Link</a></td>
+            <td><a href="https://github.com/Aditya5008/Mern-Internship-Task-3">Repo Link</a></td>
             <td><a href="https://652acca75b675c544e9c2144--startling-pudding-6ea258.netlify.app/">Deployment Link</a></td>
         </tr>
         <tr>
             <td>Task5</td>
-            <td><a href="https://github.com/atharvarai/React_task5">Repo Link</a></td>
+            <td><a href="https://github.com/Aditya5008/Mern-Internship-Task-3">Repo Link</a></td>
             <td><a href="https://vocal-lollipop-d74d69.netlify.app/">Deployment Link</a></td>
         </tr>
         <tr>
             <td>Task6</td>
-            <td><a href="https://github.com/atharvarai/React_task6">Repo Link</a></td>
-            <td><a href="https://cool-kitten-8d327a.netlify.app/">Deployment Link</a></td>
+            <td><a href="https://github.com/Aditya5008/Mern-Internship-Task-3">Repo Link</a></td>
+            <td><a href="">Deployment Link</a></td>
         </tr>
     </table>
 </body>
